--- a/MitosisTimesheet/src/main/webapp/reports/LeaveSummaryReport.jrxml
+++ b/MitosisTimesheet/src/main/webapp/reports/LeaveSummaryReport.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="LeaveSummaryReport" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
 	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="0"/>
+	<property name="ireport.x" value="93"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="fromDate" class="java.lang.String">
 		<defaultValueExpression><![CDATA[$P{fromDate}]]></defaultValueExpression>
@@ -20,8 +20,10 @@
 	<parameter name="toDateRev" class="java.lang.String">
 		<defaultValueExpression><![CDATA[$P{toDateRev}]]></defaultValueExpression>
 	</parameter>
+	<parameter name="beginDate" class="java.lang.String"/>
+	<parameter name="totalLeaveDays" class="java.math.BigDecimal"/>
 	<queryString>
-		<![CDATA[select T1.name, T1.totalLeave, T2.tot from
+		<![CDATA[select T1.name, T1.totalLeave, T2.tot, T3.total from
 (select name,sum(no_of_days) as totalLeave
 from leave_details leaveDet,user_details user
 where (leaveDet.employee_id=user.id)
@@ -30,12 +32,20 @@ group by name) T1,
 (select name,sum(no_of_days) as tot
 from leave_details lea,user_details us
 where lea.employee_id=us.id and lea.from_date>=$P{startDate} and
-lea.to_date<=$P{toDateRev} group by name) T2
-where T1.name=T2.name;]]>
+lea.to_date<=$P{toDateRev} group by name) T2,
+(select name,sum(no_of_days) as total
+from leave_details lea,user_details us
+where lea.employee_id=us.id and lea.from_date>=$P{beginDate} and
+lea.to_date<=$P{toDateRev} group by name) T3
+where T1.name=T2.name and T1.name=T3.name;]]>
 	</queryString>
 	<field name="name" class="java.lang.String"/>
 	<field name="totalLeave" class="java.math.BigDecimal"/>
 	<field name="tot" class="java.math.BigDecimal"/>
+	<field name="total" class="java.math.BigDecimal"/>
+	<variable name="balance" class="java.math.BigDecimal">
+		<variableExpression><![CDATA[new BigDecimal("20").subtract($F{total})]]></variableExpression>
+	</variable>
 	<group name="leaveSummary">
 		<groupExpression><![CDATA[$V{PAGE_NUMBER}]]></groupExpression>
 		<groupHeader>
@@ -44,34 +54,42 @@ where T1.name=T2.name;]]>
 					<reportElement x="1" y="23" width="554" height="32"/>
 				</rectangle>
 				<line>
-					<reportElement x="128" y="23" width="1" height="33"/>
+					<reportElement x="117" y="23" width="1" height="33"/>
 				</line>
 				<line>
-					<reportElement x="277" y="23" width="1" height="33"/>
+					<reportElement x="221" y="23" width="1" height="33"/>
 				</line>
 				<line>
-					<reportElement x="409" y="23" width="1" height="33"/>
+					<reportElement x="331" y="23" width="1" height="33"/>
 				</line>
 				<staticText>
-					<reportElement x="10" y="31" width="100" height="20"/>
+					<reportElement x="8" y="31" width="100" height="20"/>
 					<textElement textAlignment="Center" verticalAlignment="Middle"/>
 					<text><![CDATA[Name]]></text>
 				</staticText>
 				<staticText>
-					<reportElement x="150" y="30" width="100" height="20"/>
+					<reportElement x="118" y="30" width="100" height="20"/>
 					<textElement textAlignment="Center" verticalAlignment="Middle"/>
 					<text><![CDATA[No Of Days
 ]]></text>
 				</staticText>
 				<staticText>
-					<reportElement x="293" y="30" width="105" height="20"/>
+					<reportElement x="223" y="30" width="105" height="20"/>
 					<textElement textAlignment="Center" verticalAlignment="Middle"/>
 					<text><![CDATA[No of Days  (3 mon)]]></text>
 				</staticText>
 				<staticText>
-					<reportElement x="427" y="30" width="119" height="20"/>
+					<reportElement x="333" y="30" width="119" height="20"/>
 					<textElement textAlignment="Center" verticalAlignment="Middle"/>
-					<text><![CDATA[Balance Leave (3 mon)]]></text>
+					<text><![CDATA[Balance (3 mon)]]></text>
+				</staticText>
+				<line>
+					<reportElement x="456" y="23" width="1" height="31"/>
+				</line>
+				<staticText>
+					<reportElement x="462" y="30" width="83" height="20"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle"/>
+					<text><![CDATA[Balance (year)]]></text>
 				</staticText>
 			</band>
 		</groupHeader>
@@ -119,33 +137,41 @@ where T1.name=T2.name;]]>
 				<reportElement x="1" y="-1" width="554" height="41"/>
 			</rectangle>
 			<line>
-				<reportElement x="128" y="-2" width="1" height="42"/>
+				<reportElement x="117" y="-2" width="1" height="42"/>
 			</line>
 			<line>
-				<reportElement x="277" y="-1" width="1" height="42"/>
+				<reportElement x="221" y="-1" width="1" height="42"/>
 			</line>
 			<line>
-				<reportElement x="409" y="-1" width="1" height="41"/>
+				<reportElement x="331" y="-1" width="1" height="41"/>
 			</line>
 			<textField isBlankWhenNull="true">
-				<reportElement x="11" y="10" width="100" height="20"/>
+				<reportElement x="8" y="10" width="100" height="20"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{name}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="150" y="10" width="100" height="20"/>
+				<reportElement x="118" y="10" width="100" height="20"/>
 				<textElement textAlignment="Center"/>
 				<textFieldExpression class="java.math.BigDecimal"><![CDATA[$F{totalLeave}]]></textFieldExpression>
 			</textField>
 			<textField pattern="">
-				<reportElement x="427" y="10" width="100" height="20"/>
+				<reportElement x="333" y="10" width="100" height="20"/>
 				<textElement textAlignment="Center"/>
 				<textFieldExpression class="java.math.BigDecimal"><![CDATA[new BigDecimal("5").subtract($F{tot})]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="288" y="10" width="100" height="20"/>
+				<reportElement x="222" y="10" width="100" height="20"/>
 				<textElement textAlignment="Center"/>
 				<textFieldExpression class="java.math.BigDecimal"><![CDATA[$F{tot}]]></textFieldExpression>
+			</textField>
+			<line>
+				<reportElement x="456" y="0" width="1" height="39"/>
+			</line>
+			<textField>
+				<reportElement x="474" y="9" width="55" height="20"/>
+				<textElement textAlignment="Center"/>
+				<textFieldExpression class="java.math.BigDecimal"><![CDATA[$V{balance}.compareTo($P{totalLeaveDays})?$P{totalLeaveDays}:$V{balance}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
