--- a/MitosisTimesheet/src/main/webapp/reports/employeeDetailsReport.jrxml
+++ b/MitosisTimesheet/src/main/webapp/reports/employeeDetailsReport.jrxml
@@ -2,21 +2,21 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report1" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
 	<property name="ireport.zoom" value="1.5"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.y" value="227"/>
 	<queryString>
-		<![CDATA[SELECT (SELECT count(*) from employee_master) as employee_count,employee_master.id,employee_master.first_name, employee_master.last_name, lob_master.lob_name
+		<![CDATA[SELECT (SELECT count(*) from employee_master) as employee_count,employee_master.employee_id,employee_master.first_name, employee_master.last_name, lob_master.lob_name
 FROM employee_master
-INNER JOIN lob_master
+LEFT OUTER JOIN lob_master
 ON employee_master.lob_id=lob_master.id
-order by lob_name,employee_master.id;]]>
+order by lob_name,employee_master.employee_id;]]>
 	</queryString>
 	<field name="employee_count" class="java.lang.Long"/>
-	<field name="id" class="java.lang.Integer"/>
+	<field name="employee_id" class="java.lang.String"/>
 	<field name="first_name" class="java.lang.String"/>
 	<field name="last_name" class="java.lang.String"/>
 	<field name="lob_name" class="java.lang.String"/>
 	<variable name="totalemployees" class="java.lang.Integer" resetType="Group" resetGroup="lob" calculation="Count">
-		<variableExpression><![CDATA[$F{id}]]></variableExpression>
+		<variableExpression><![CDATA[$F{employee_id}]]></variableExpression>
 	</variable>
 	<group name="lob">
 		<groupExpression><![CDATA[$F{lob_name}]]></groupExpression>
@@ -27,7 +27,7 @@ order by lob_name,employee_master.id;]]>
 					<textElement/>
 					<text><![CDATA[LOB Name:]]></text>
 				</staticText>
-				<textField>
+				<textField isBlankWhenNull="true">
 					<reportElement x="74" y="13" width="186" height="20"/>
 					<textElement/>
 					<textFieldExpression class="java.lang.String"><![CDATA[$F{lob_name}]]></textFieldExpression>
@@ -41,7 +41,7 @@ order by lob_name,employee_master.id;]]>
 					<text><![CDATA[Employee Id]]></text>
 				</staticText>
 				<staticText>
-					<reportElement x="174" y="52" width="100" height="20"/>
+					<reportElement x="207" y="52" width="100" height="20"/>
 					<textElement textAlignment="Center" verticalAlignment="Middle"/>
 					<text><![CDATA[First Name]]></text>
 				</staticText>
@@ -67,14 +67,14 @@ order by lob_name,employee_master.id;]]>
 					<reportElement x="355" y="0" width="1" height="27"/>
 				</line>
 				<staticText>
-					<reportElement x="174" y="5" width="110" height="20"/>
+					<reportElement x="200" y="5" width="110" height="20"/>
 					<textElement textAlignment="Center" verticalAlignment="Middle"/>
 					<text><![CDATA[Total]]></text>
 				</staticText>
 				<line>
 					<reportElement x="147" y="0" width="1" height="27"/>
 				</line>
-				<textField>
+				<textField isBlankWhenNull="true">
 					<reportElement x="407" y="5" width="127" height="20"/>
 					<textElement textAlignment="Center" verticalAlignment="Middle"/>
 					<textFieldExpression class="java.lang.Integer"><![CDATA[$V{totalemployees}]]></textFieldExpression>
@@ -97,25 +97,20 @@ order by lob_name,employee_master.id;]]>
 		</band>
 	</title>
 	<pageHeader>
-		<band height="50"/>
+		<band height="49"/>
 	</pageHeader>
 	<detail>
 		<band height="36">
 			<rectangle>
 				<reportElement x="0" y="0" width="555" height="36"/>
 			</rectangle>
-			<textField>
-				<reportElement x="32" y="8" width="100" height="20"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<textFieldExpression class="java.lang.Integer"><![CDATA[$F{id}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="172" y="9" width="106" height="20"/>
+			<textField isBlankWhenNull="true">
+				<reportElement x="172" y="9" width="150" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{first_name}]]></textFieldExpression>
 			</textField>
-			<textField>
-				<reportElement x="407" y="9" width="127" height="20"/>
+			<textField isBlankWhenNull="true">
+				<reportElement x="397" y="9" width="137" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{last_name}]]></textFieldExpression>
 			</textField>
@@ -125,6 +120,11 @@ order by lob_name,employee_master.id;]]>
 			<line>
 				<reportElement x="355" y="0" width="1" height="36"/>
 			</line>
+			<textField isBlankWhenNull="true">
+				<reportElement x="32" y="9" width="100" height="20"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{employee_id}]]></textFieldExpression>
+			</textField>
 		</band>
 	</detail>
 	<columnFooter>
@@ -155,7 +155,7 @@ order by lob_name,employee_master.id;]]>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<text><![CDATA[Total Employees]]></text>
 			</staticText>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement x="407" y="20" width="127" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.Long"><![CDATA[$F{employee_count}]]></textFieldExpression>
