commit for images and report

--- a/MitosisTimesheet/src/main/webapp/reports/LeaveSummaryReport.jrxml
+++ b/MitosisTimesheet/src/main/webapp/reports/LeaveSummaryReport.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="LeaveSummaryReport" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
 	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="0"/>
+	<property name="ireport.x" value="93"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="fromDate" class="java.lang.String">
 		<defaultValueExpression><![CDATA[$P{fromDate}]]></defaultValueExpression>
@@ -45,6 +45,9 @@ where T1.name=T2.name and T1.name=T3.name;]]>
 	<field name="total" class="java.math.BigDecimal"/>
 	<variable name="balance" class="java.math.BigDecimal">
 		<variableExpression><![CDATA[new BigDecimal("20").subtract($F{total})]]></variableExpression>
+	</variable>
+	<variable name="monthlyBalance" class="java.math.BigDecimal">
+		<variableExpression><![CDATA[new BigDecimal("5").subtract($F{tot})]]></variableExpression>
 	</variable>
 	<group name="leaveSummary">
 		<groupExpression><![CDATA[$V{PAGE_NUMBER}]]></groupExpression>
@@ -155,11 +158,6 @@ where T1.name=T2.name and T1.name=T3.name;]]>
 				<textElement textAlignment="Center"/>
 				<textFieldExpression class="java.math.BigDecimal"><![CDATA[$F{totalLeave}]]></textFieldExpression>
 			</textField>
-			<textField pattern="">
-				<reportElement x="333" y="10" width="100" height="20"/>
-				<textElement textAlignment="Center"/>
-				<textFieldExpression class="java.math.BigDecimal"><![CDATA[new BigDecimal("5").subtract($F{tot})]]></textFieldExpression>
-			</textField>
 			<textField>
 				<reportElement x="222" y="10" width="100" height="20"/>
 				<textElement textAlignment="Center"/>
@@ -171,7 +169,12 @@ where T1.name=T2.name and T1.name=T3.name;]]>
 			<textField>
 				<reportElement x="474" y="9" width="55" height="20"/>
 				<textElement textAlignment="Center"/>
-				<textFieldExpression class="java.math.BigDecimal"><![CDATA[$V{balance}.compareTo($P{totalLeaveDays})?$P{totalLeaveDays}:$V{balance}]]></textFieldExpression>
+				<textFieldExpression class="java.math.BigDecimal"><![CDATA[$V{balance}.compareTo($P{totalLeaveDays}) == 1 ? $P{totalLeaveDays}.add($V{monthlyBalance}) : $P{totalLeaveDays}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="343" y="10" width="100" height="20"/>
+				<textElement textAlignment="Center"/>
+				<textFieldExpression class="java.math.BigDecimal"><![CDATA[$V{monthlyBalance}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
