--- a/MitosisTimesheet/src/main/webapp/reports/EmployeeExperienceReport.jrxml
+++ b/MitosisTimesheet/src/main/webapp/reports/EmployeeExperienceReport.jrxml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="EmployeeExperienceReport" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
 	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="79"/>
+	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="date" class="java.lang.String"/>
 	<parameter name="dateRev" class="java.lang.String"/>
 	<queryString>
-		<![CDATA[select employee_id,first_name,last_name, TIMESTAMPDIFF(MONTH, joining_date, $P{dateRev})%12 as Monthdiff,TIMESTAMPDIFF(YEAR, joining_date,$P{dateRev} ) as Yeardiff from employee_master order by employee_id]]>
+		<![CDATA[select employee_id,first_name,last_name,joining_date, TIMESTAMPDIFF(MONTH, joining_date, $P{dateRev})%12 as Monthdiff,TIMESTAMPDIFF(YEAR, joining_date,$P{dateRev} ) as Yeardiff from employee_master order by employee_id]]>
 	</queryString>
 	<field name="employee_id" class="java.lang.String"/>
 	<field name="first_name" class="java.lang.String"/>
 	<field name="last_name" class="java.lang.String"/>
+	<field name="joining_date" class="java.sql.Date"/>
 	<field name="Monthdiff" class="java.lang.Long"/>
 	<field name="Yeardiff" class="java.lang.Long"/>
 	<variable name="months" class="java.math.BigDecimal"/>
@@ -22,42 +23,50 @@
 					<reportElement x="0" y="16" width="555" height="33"/>
 				</rectangle>
 				<staticText>
-					<reportElement x="6" y="22" width="87" height="20"/>
+					<reportElement x="4" y="22" width="87" height="20"/>
 					<textElement textAlignment="Center" verticalAlignment="Middle"/>
-					<text><![CDATA[Employee Id]]></text>
+					<text><![CDATA[Employee ID]]></text>
 				</staticText>
 				<staticText>
-					<reportElement x="121" y="22" width="100" height="20"/>
+					<reportElement x="99" y="22" width="100" height="20"/>
 					<textElement textAlignment="Center" verticalAlignment="Middle"/>
 					<text><![CDATA[First Name]]></text>
 				</staticText>
 				<staticText>
-					<reportElement x="242" y="23" width="100" height="20"/>
+					<reportElement x="213" y="23" width="90" height="20"/>
 					<textElement textAlignment="Center" verticalAlignment="Middle"/>
 					<text><![CDATA[Last Name]]></text>
 				</staticText>
 				<staticText>
-					<reportElement x="358" y="23" width="85" height="20"/>
+					<reportElement x="396" y="23" width="71" height="20"/>
 					<textElement textAlignment="Center" verticalAlignment="Middle"/>
-					<text><![CDATA[Years Of Exp]]></text>
+					<text><![CDATA[Years of Exp]]></text>
 				</staticText>
 				<staticText>
-					<reportElement x="462" y="23" width="86" height="20"/>
+					<reportElement x="474" y="23" width="76" height="20"/>
 					<textElement textAlignment="Center" verticalAlignment="Middle"/>
-					<text><![CDATA[Months Of Exp]]></text>
+					<text><![CDATA[Months of Exp]]></text>
 				</staticText>
 				<line>
-					<reportElement x="106" y="16" width="1" height="33"/>
+					<reportElement x="93" y="16" width="1" height="33"/>
 				</line>
 				<line>
-					<reportElement x="232" y="16" width="1" height="33"/>
+					<reportElement x="205" y="16" width="1" height="33"/>
 				</line>
 				<line>
-					<reportElement x="351" y="16" width="1" height="33"/>
+					<reportElement x="316" y="16" width="1" height="33"/>
 				</line>
 				<line>
-					<reportElement x="453" y="16" width="1" height="33"/>
+					<reportElement x="468" y="16" width="1" height="33"/>
 				</line>
+				<line>
+					<reportElement x="393" y="16" width="1" height="33"/>
+				</line>
+				<staticText>
+					<reportElement x="319" y="23" width="71" height="20"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle"/>
+					<text><![CDATA[Joined Date]]></text>
+				</staticText>
 			</band>
 		</groupHeader>
 		<groupFooter>
@@ -94,41 +103,49 @@
 				<reportElement x="0" y="0" width="555" height="39"/>
 			</rectangle>
 			<line>
-				<reportElement x="453" y="-1" width="1" height="40"/>
+				<reportElement x="468" y="-1" width="1" height="40"/>
 			</line>
 			<line>
-				<reportElement x="351" y="-1" width="1" height="40"/>
+				<reportElement x="316" y="-1" width="1" height="40"/>
 			</line>
 			<line>
-				<reportElement x="232" y="-1" width="1" height="40"/>
+				<reportElement x="205" y="-1" width="1" height="40"/>
 			</line>
 			<line>
-				<reportElement x="106" y="-1" width="1" height="40"/>
+				<reportElement x="93" y="-1" width="1" height="40"/>
 			</line>
 			<textField>
-				<reportElement x="9" y="10" width="84" height="20"/>
+				<reportElement x="4" y="10" width="84" height="20"/>
 				<textElement textAlignment="Center"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{employee_id}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="123" y="11" width="100" height="20"/>
+				<reportElement x="101" y="11" width="100" height="20"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{first_name}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="244" y="11" width="100" height="20"/>
+				<reportElement x="213" y="11" width="90" height="20"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{last_name}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="363" y="10" width="79" height="20"/>
+				<reportElement x="403" y="10" width="51" height="20"/>
 				<textElement textAlignment="Center"/>
 				<textFieldExpression class="java.lang.Long"><![CDATA[$F{Yeardiff}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="464" y="9" width="79" height="20"/>
+				<reportElement x="488" y="9" width="52" height="20"/>
 				<textElement textAlignment="Center"/>
 				<textFieldExpression class="java.lang.Long"><![CDATA[$F{Monthdiff}]]></textFieldExpression>
+			</textField>
+			<line>
+				<reportElement x="393" y="-1" width="1" height="40"/>
+			</line>
+			<textField pattern="dd-MM-yyyy">
+				<reportElement x="320" y="10" width="71" height="20"/>
+				<textElement textAlignment="Center"/>
+				<textFieldExpression class="java.util.Date"><![CDATA[$F{joining_date}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
