--- a/MitosisTimesheet/src/main/webapp/reports/pendingBalanceReport.jrxml
+++ b/MitosisTimesheet/src/main/webapp/reports/pendingBalanceReport.jrxml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report1" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
 	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="79"/>
-	<property name="ireport.y" value="47"/>
+	<property name="ireport.x" value="0"/>
+	<property name="ireport.y" value="0"/>
 	<queryString>
 		<![CDATA[SELECT cust.customer_name,project.project_name,invoice.invoice_date,invoice.invoice_amount,invoice.paid_amount,invoice.balance_amount,invoice.invoice_number FROM invoice_hdr invoice,customer_details cust,project_details project
 where balance_amount>0 and invoice.project_id=project.id and cust.id=project.customer_id
+order by cust.customer_name,project.project_name,invoice.id
+
 ;]]>
 	</queryString>
 	<field name="customer_name" class="java.lang.String"/>
@@ -30,7 +32,7 @@ where balance_amount>0 and invoice.project_id=project.id and cust.id=project.cus
 					<textElement verticalAlignment="Middle"/>
 					<text><![CDATA[Customer Name :]]></text>
 				</staticText>
-				<textField>
+				<textField pattern="">
 					<reportElement x="91" y="1" width="100" height="20"/>
 					<textElement verticalAlignment="Middle"/>
 					<textFieldExpression class="java.lang.String"><![CDATA[$F{customer_name}]]></textFieldExpression>
